test/visibility/relative-use/use-relative-error1.good
use-relative-error1.chpl:1: In module 'M':
use-relative-error1.chpl:5: error: cannot 'use' symbol 'x', which is not a module or enum
