test/visibility/relative-use/use-relative-error1.chpl
module M {

  var x:int;

  use this.x;
}
